--- a/src/components/PokedexPage/styles/PokeCard.css
+++ b/src/components/PokedexPage/styles/PokeCard.css
@@ -91,7 +91,7 @@
     font-size: 1.1rem;
 }
 
-/* Falta el resto!!! */
+/*------------------------------ COLOR ------------------------------*/
 
 /*------------------------------ Grass ------------------------------*/
 .grass-gradient{
