--- a/src/components/PokedexPage/styles/SelectType.css
+++ b/src/components/PokedexPage/styles/SelectType.css
@@ -1,9 +1,16 @@
 .selecttype{
-    display: flex;
-    justify-content: center;
-    width: 8em;
-    padding: 0.5;
-    border-radius: 0rem 0.5rem 0.5rem 0rem;
-    font-weight: 700;
-    
+    font-size: 1.4rem;
+    background-color: blueviolet;
+} 
+
+.selecttype__container{
+    font-size: 45px;
+}
+
+.selecttype__allpoke{
+    font-size: 20px;
+}
+
+.selecttype__listype{
+    font-size: 20px;
 }
