--- a/src/pages/styles/PokedexPage.css
+++ b/src/pages/styles/PokedexPage.css
@@ -1,22 +1,24 @@
 .pokedex{
     background-color: rgb(236, 229, 229);
-    min-height: 100vh;
+    width: 100%;
+}
+.pokedex__header{
+    position: relative;
+    top: 0;
 }
 
-
 .pokedex__header--img {
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    max-width: 2000px;
-    height: auto;
+    width: 100%; 
+    height: auto; 
+    max-width: 100%; 
+    max-height: 100%;
 }
 
 .pokedex__header--teatle {
     position: absolute;
     width: 100%;
-    max-width: 800px;
+    height: 100%;
+    max-width: 100vh;
 }
 
 .pokedex__greeting{
