--- a/src/pages/styles/PokedexPage.css
+++ b/src/pages/styles/PokedexPage.css
@@ -21,21 +21,90 @@
     max-width: 100vh;
 }
 
-.pokedex__greeting{
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1em 1em 0em 1em;
-    font-size: 25px;
+.pokedex__greeting {
+    display: grid;
+    grid-template-areas:
+        "name"
+        "content";
+    grid-template-rows: auto auto;
+    justify-items: center;
 }
 
-.pokedex__greeting--name{
+.pokedex__greeting--name {
+    grid-area: name;
     color: #dd1a1a;
     font-weight: 900;
+    padding-top: 1em;
 }
 
+.pokedex__greeting--find {
+    grid-area: content;
+    font-weight: 500;
+    padding-bottom: 1em;
+}
+
+.pokedex__container {
+    display: grid;
+    grid-template-areas:
+        "form"
+        "select";
+    grid-template-rows: auto auto;
+    justify-items: center;
+}
+
+.pokedex__form {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    padding: 1em;
+}
+
+.pokedex__input {
+    font-size: 20px;
+    padding: 0.5em 1em;
+    border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.pokedex__btn {
+    display: block;
+    border-radius: 0rem 0.5rem 0.5rem 0rem;
+    background: linear-gradient(to right, #dd1a1a, #FFFFFF);
+    transition: background 1s ease;
+    color: #FFFFFF;
+}
+
+.pokedex__btn:hover {
+    background: #FF0000;
+}
+
+.selecttype__container {
+    justify-content: center;
+    font-size: 20px;
+    height: 50px;
+    width: 130px;
+    border-radius: 0.5rem;
+}
+
+
+.pokedex__page{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 30px auto;
+}
+/* 
+.pokedex__page {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3em;
+    justify-content: center;
+}
+ */
+
+/* 
 .pokedex__container {
     display: flex;
     justify-content: center;
@@ -46,12 +115,6 @@
 
 .pokedex__form {
     display: flex;
-    gap: 0.5em; 
-}
-
-.pokedex__selecttype {
-    display: flex;
-    align-items: center; 
     gap: 0.5em; 
 }
 
@@ -66,15 +129,19 @@
 
     border-radius: 0rem 0.5rem 0.5rem 0rem;
     background: linear-gradient(to right, #dd1a1a, #FFFFFF);
-    transition: background 1s ease; /* Ajusta la duración y la función de temporización según tus necesidades */
+    transition: background 1s ease;
     color: #FFFFFF;
-    font-weight: 700;
-    font-size: 50px;
 }
 .pokedex__btn:hover {
-    background: #FF0000; /* Cambia directamente a rojo al hacer hover */
+    background: #FF0000;
 }
 
+.pokedex__selecttype {
+    display: flex;
+    align-items: center; 
+    gap: 0.5em; 
+}
+*/
 
 .pokedex__err{
     min-height: 100vh;
@@ -85,9 +152,3 @@
     font-weight: 700;
 }
 
-.pokedex__page {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 3em;
-    justify-content: center;
-}
