--- a/src/pages/styles/PokeInfoPage.css
+++ b/src/pages/styles/PokeInfoPage.css
@@ -1,27 +1,31 @@
 .pokeinfopage{
     background-color: rgb(236, 229, 229);
-    min-height: 100vh;
+    width: 100%;
 }
 
+.pokeinfopage__header{
+    position: relative;
+    top: 0;
+}
 
 .pokeinfopage__header--img {
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    max-width: 2000px;
-    height: auto;
+    width: 100%; 
+    height: auto; 
+    max-width: 100%; 
+    max-height: 100%;
 }
 
-.pokeinfopage__header--teatle {
+.pokeinfopage__header--title {
     position: absolute;
     width: 100%;
-    max-width: 800px;
+    height: 100%;
+    max-width: 100vh;
 }
 
 .pokeinfopage__pokeinfocard{
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    gap: 3em;
     justify-content: center;
+    align-items: center; /* Añade esta línea para centrar verticalmente */
+    text-align: center; 
 }
