Se crea la paginacion. REVISAR IMAGENES. ruta absoluta no funciona

--- a/src/pages/styles/HomePages.css
+++ b/src/pages/styles/HomePages.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 100vw; /* Cambiado a vw para ajustarse al ancho de la ventana gráfica */
+    width: 100vw; 
     height: 100vh;
 }
 
