--- a/src/pages/styles/PokeInfoPage.css
+++ b/src/pages/styles/PokeInfoPage.css
@@ -26,6 +26,6 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center; /* Añade esta línea para centrar verticalmente */
+    align-items: center; 
     text-align: center; 
 }
